adding listener to first flag

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:id="@+id/japanView" />
+        android:id="@+id/australianFlag" />
 
 
     <com.example.niva.customviewexample.FranceFlagView
